[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["minarae <minarae@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
